# data-science-project-template

./: Dockerfile  README.md  docker-compose.yml
config/: pyproject.toml  requirements.txt
notebooks/: 0_eda.ipynb  1_modeling.ipynb
src/data/: dataset.py
src/features/: build_features.py
src/models/: base.py  embedding.py  evaluate.py  evaluate_fine_tune.py  extract.py  fine_tune.py  trainer.py  utils.py  zero_shot_classifier.py
src/tools/: utils.py
src/visualization/: plot_data.py
