[tool.poetry]
name = "data-science-project"
version = "0.1.0"
description = "Projecte de Data Science"
authors = ["El teu nom <teu.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
numpy = "^1.23.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
